# pic-upv-lab2

./: .gitignore  20_COUPLERS_v2025_Student.ipynb  COUPLERS_Student.ipynb  LabBook_20.pptx  README.md  pyproject.toml
