[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upvfab-design-tools"
version = "0.1.0"
description = "Library for UPV PIC coupler and EME design workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdsfactory==9.34.0",
    "gplugins[femwell,tidy3d]==2.0.1",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "shapely>=2.0",
    "pytz",
    "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
